--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/colearrington98/Blog-Site.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
